force-app/main/default/objects/Freee_Configs__c/Freee_Configs__c.object-meta.xml
<CustomObject>
    <label>Freee設定</label>
    <nameField>
        <label>設定名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>