force-app/main/default/objects/Freee_Configs__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <label>事業所ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>