force-app/main/default/objects/Freee_Configs__c/fields/Invoice_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Base_Url__c</fullName>
    <label>請求書ベースURL</label>
    <type>Url</type>
</CustomField>