force-app/main/default/objects/Freee_Configs__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>支払方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>