force-app/main/default/objects/Freee_Configs__c/fields/Quotation_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Template_Id__c</fullName>
    <label>見積テンプレートID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>