force-app/main/default/objects/Freee_Configs__c/fields/Tax_Entry_Method__c.field-meta.xml
<CustomField>
    <fullName>Tax_Entry_Method__c</fullName>
    <label>税額計算方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>