force-app/main/default/objects/Freee_Configs__c/fields/Tax_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Fraction__c</fullName>
    <label>tax_fraction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>