force-app/main/default/objects/Freee_Configs__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>template_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>