force-app/main/default/objects/Freee_Configs__c/fields/Withholding__c.field-meta.xml
<CustomField>
    <fullName>Withholding__c</fullName>
    <label>withholding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>